improve benchmark commands